Some more examples and testing
